Wave 8 + Wave 1/2 closure: CI matrix, native fixes, doc refresh
Wave 8 — forcing-function CI matrix (WP8.7):
  - 11 S2 app benches under bench/{keycloak16,keycloak26,ejbca,tomcat10,
    jetty12,quarkus3,springboot3,maven,gradle,kafka,cassandra}/ each with
    stage/run/diff scripts and a schema-v1 baseline pinning the current
    WP0.1 NPE failure mode so any drift fires the diff.
  - .github/workflows/forcing-function-smoke.yml — nightly 06:00 UTC
    matrix over the 11 apps + workflow_dispatch + on-PR-when-bench-changes.
  - .github/workflows/soak-weekly.yml — placeholder for WP8.1 (Sun 04:00 UTC).
  - bench/wildfly/ and ejbca-smoke.yml left untouched.

Wave 1/2/8 closure fixes:
  - WP1.9 (StackWalker): registered StackStreamFactory$AbstractStackWalker.
    checkStackWalkModes()Z in native-builtins/src/stack_walker.rs with a
    descriptor-aware validate_stack_walk_modes helper. Resolves session-93
    NPE on the missing native; 5 new unit tests.
  - WP1.8 (ServiceLoader): rewrote discover_providers in
    native-builtins/src/service_loader.rs to bypass the JDK round-trip
    (Thread.getContextClassLoader -> URL.openStream -> BufferedReader)
    that NSME'd in real-JDK mode. Now scans META-INF/services/<svc>
    bytes directly via the new find_all_resource_bytes helper added
    across ClassPath, ClassManager, NativeContext (default empty impl),
    and Vm. Service name resolved via class_id_from_mirror +
    class_name_of_id with synthetic-mode getName() fallback.
  - WP8.4 (verifier): added XverifyMode enum (None/Remote/All) +
    with_xverify_mode builder in vm/src/config.rs and -Xverify CLI
    parsing in vm-cli/src/main.rs (existing verifier already implemented
    Pass 2/3, JSR/RET, StackMapTable, uninitializedThis).
  - WP8.5 (tracing): wired init_unified_logging(spec) from
    vm/src/vm/vm_init.rs so the existing 1240-LoC unified_logging.rs
    JEP 158/271 framework actually runs at startup. Per-event emit
    calls in GC and class-load sites still TODO.
 